src/test/ui/nll/ty-outlives/ty-param-fn-body.stderr
error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/ty-param-fn-body.rs:19:5
   |
LL | fn region_static<'a, T>(cell: Cell<&'a usize>, t: T) {
   |                      - help: consider adding an explicit lifetime bound...: `T: 'a`
LL |     outlives(cell, t)
   |     ^^^^^^^^^^^^^^^^^ ...so that the type `T` will meet its required lifetime bounds

error: aborting due to previous error

For more information about this error, try `rustc --explain E0309`.
